objects/QBO_Bundle_datafix__c.object
<CustomObject>
    <fields>
        <fullName>Company_id__c</fullName>
        <label>Company_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpptyId__c</fullName>
        <label>OpptyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Asset_Id__c</fullName>
        <label>Parent_Asset_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>toprocess__c</fullName>
        <defaultValue>true</defaultValue>
        <label>toprocess</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>